# KiCadRoutingTools

./: .gitattributes  .gitignore  .gui-parity-checked  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  add_gnd_vias.py  analyze_power_paths.py  animate_fanout_clearance.py  animate_route.py  batch_grid_router.py  bga_fanout.py  blocking_analysis.py  bresenham_utils.py  build_placer.py  build_router.py  bus_corridor.py  bus_detection.py  check_connected.py  check_cycles.py  check_drc.py  check_orphan_stubs.py  check_orthonormal.py  check_pads.py  check_release_version.py  check_weird.py  chip_boundary.py  clean_ignored.py  cleanup_pipeline.py  clearance_ledger.py  congestion_field.py  connectivity.py  console_encoding.py  copy_board.py  diff_pair_custody.py  diff_pair_loop.py  diff_pair_multipoint.py  diff_pair_routing.py  (+104 more)
bga_fanout/: README.md  __init__.py  collision.py  constants.py  diff_pair.py  escape.py  geometry.py  grid.py  layer_assignment.py  layer_balance.py  reroute.py  rotate_frame.py  tracks.py  types.py  underpad.py
docs/: api-impedance.md  api-kicad-parser.md  api-kicad-writer.md  api-net-analysis.md  api-pcb-modification.md  api-routing-config.md  bus-routing.md  claude-skills.md  configuration.md  differential-pairs.md  length-matching.md  net-ordering.md  placement-optimization.md  power-nets.md  python-api.md  release-pipeline.md  rip-up-reroute.md  route-animation.md  (+3 more)
rust_router/: Cargo.toml  README.md  microbench.py
rust_router/src/: dubins.rs  lib.rs  obstacle_map.rs  pose_router.rs  router.rs  types.rs  visual_router.rs
(+399 files in other folders)
