[package]
name = "grid_router"
version = "0.18.3"
edition = "2021"
# Versioning convention: this Rust crate's major.minor is the base for the
# whole project. The top-level /VERSION file mirrors major.minor and bumps
# its patch number for Python-only changes (e.g. Rust 0.15.0 -> repo 0.15.x).
# Bump this crate's major or minor whenever the router itself changes, and
# realign /VERSION at the same time.

[lib]
name = "grid_router"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
numpy = "0.23"  # NumPy support for PyO3
rustc-hash = "2.1"  # Fast hash for integer keys
mimalloc = { version = "0.1", default-features = false }  # EXPERIMENT: page-returning allocator

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
